# plane

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: publish.yml
docs/: 01_getting_started.md  02_data_types.md  03_modules_and_ports.md  04_combinational_logic.md  05_sequential_logic.md  06_control_flow.md  07_bundles_and_vecs.md  08_module_instantiation.md  09_parameters.md  10_blackboxes.md  11_attributes.md  12_width_checking.md  13_fsm_example.md  14_comments.md  15_csr.md  16_csr_collateral.md
docs/examples/: custom_field.py
scripts/: pre-commit  release
skills/plane-csr/: SKILL.md
skills/plane-hdl/: SKILL.md
src/plane/: __init__.py  base.py  connect.py  control.py  emit.py  ir.py  nodes.py  types.py  utils.py
src/plane/lib/amba/apb/: __init__.py  adapters.py  bundles.py
src/plane/lib/csr/: __init__.py  block.py  c_header.py  fields.py  html.py  register.py  system.py  uvm_ral.py  yaml_io.py
tests/: conftest.py  test_basic.py  test_blackbox.py  test_bundle.py  test_conditionals.py  test_emit_comments.py  test_enum.py  test_fanout.py  test_instance.py  test_instance_array.py  test_module_naming.py  test_ops.py  test_optimization.py  test_reg.py  test_slice_assign.py  test_validation.py  test_vec.py
tests/lib/csr/: apb_tb.sv  test_apb_bfm.py  test_c_header.py  test_c_header_compile.py  test_field_naming.py  test_fields.py  test_html.py  test_uvm_ral.py  test_yaml.py  test_yaml_system.py
